--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P608.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P608.xaml
@@ -316,7 +316,6 @@
         <Labels:JumpLabel JumpFromLabel="546-01-MA1" JumpToLabel="545-01-MA1" Canvas.Left="78" Canvas.Top="109" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="546-01-MA1" JumpToLabel="535-01-MA1" Canvas.Left="57" Canvas.Top="34" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="616-01-MA1" JumpToLabel="808-21-CV1" Canvas.Left="1287" Canvas.Top="737" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel ComponentName="557-ED-CUR" DetailsPageName="D557" Canvas.Left="183" Canvas.Top="405" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="608-01-YA1" Canvas.Left="1373" Canvas.Top="308" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="608-02-MA1" Canvas.Left="1373" Canvas.Top="378" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="548-01-MA1" Canvas.Left="79" Canvas.Top="231" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -343,5 +342,6 @@
                 </TransformGroup>
             </Machines:V01_CV_Valve_wColor.RenderTransform>
         </Machines:V01_CV_Valve_wColor>
+        <Labels:DeviceLabel ComponentName="557-01-EC1" Canvas.Left="183" Canvas.Top="400" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
