--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P890.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P890.xaml
@@ -7,7 +7,7 @@
 			 xmlns:lex="http://wpflocalizeextension.codeplex.com"
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" 
-             x:Class="Prevu.Synoptics.P880" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P890" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
         <Labels:Pipe Width="60" StatusComponent="890-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1101" Canvas.Top="359" HorizontalAlignment="Left" VerticalAlignment="Center">
@@ -268,18 +268,6 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="257" StatusComponent="890-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="354" Canvas.Top="179" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="887-01-MA1" Color="Air" Canvas.Left="339" Canvas.Top="807" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="127" RenderTransformOrigin="0.5,0.5" StatusComponent="887-01-MA1" Canvas.Left="175" Canvas.Top="807" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="885-01-MA1" Canvas.Left="286" Canvas.Top="771" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe Width="76" StatusComponent="890-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="283" Canvas.Top="674" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -303,17 +291,6 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="135" StatusComponent="890-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="814" Canvas.Top="116" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="162" StatusComponent="890-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="154" Canvas.Top="656" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="58" StatusComponent="890-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="285" Canvas.Top="683" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform />
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe Width="106" StatusComponent="890-01-ECS7" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="270" Canvas.Top="440" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -346,21 +323,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="74" StatusComponent="878-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="122" Canvas.Top="174" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="104" StatusComponent="878-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="140" Canvas.Top="127" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="57" StatusComponent="878-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="266" Canvas.Top="117" VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="198" StatusComponent="878-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="879-21-CV1" VisibilitySignal="LS2" Canvas.Left="270" Canvas.Top="81" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="96" StatusComponent="878-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="112" Canvas.Top="81" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="108" StatusComponent="878-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" Canvas.Left="265" Canvas.Top="167" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="211" StatusComponent="878-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="112" Canvas.Top="81" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="144" StatusComponent="878-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" Canvas.Left="247" Canvas.Top="149" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -461,18 +425,6 @@
                 </TransformGroup>
             </Machines:V01_ScarpaTrasporto.RenderTransform>
         </Machines:V01_ScarpaTrasporto>
-        <Machines:V01_DV_Diverter Canvas.Left="186" Canvas.Top="74" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle Height="94" Stroke="Black" Width="4" Canvas.Left="154" Canvas.Top="143" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:External Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="132" Canvas.Top="211" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:External.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:External.RenderTransform>
-        </Machines:External>
         <Rectangle Height="2" Stroke="Black" Width="71" RenderTransformOrigin="0.5,0.5" Canvas.Left="966" Canvas.Top="466" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1028" Canvas.Top="438" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:External.RenderTransform>
@@ -516,27 +468,6 @@
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="536" Canvas.Top="742" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VS_Airlock Canvas.Left="613" Canvas.Top="662" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_ScarpaTrasporto Canvas.Left="606" Canvas.Top="731" Height="46" Width="73" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="381" Canvas.Top="783" RenderTransformOrigin="0.5,0.5" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
-        </Machines:V01_VT_CMM_Blower_Air_Compressor>
-        <Machines:V01_VS_Airlock Canvas.Left="292" Canvas.Top="703" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_ScarpaTrasporto Canvas.Left="278" Canvas.Top="773" Height="46" Width="73" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:V01_ScarpaTrasporto.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:V01_ScarpaTrasporto.RenderTransform>
-        </Machines:V01_ScarpaTrasporto>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="956" Canvas.Top="755" RenderTransformOrigin="0.5,0.5" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
                 <TransformGroup>
@@ -559,39 +490,33 @@
             </Machines:V01_ScarpaTrasporto.RenderTransform>
         </Machines:V01_ScarpaTrasporto>
         <Labels:JumpLabel JumpFromLabel="879-21-CV1" JumpToLabel="878-01-MA1" Canvas.Left="40" Canvas.Top="51" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:JumpLabel JumpFromLabel="898-01-MA1" JumpToLabel="909-21-CV1" Canvas.Left="444" Canvas.Top="51" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:JumpLabel JumpFromLabel="898-01-MA1" JumpToLabel="909-21-CV1" Canvas.Left="1442" Canvas.Top="739" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:JumpLabel JumpFromLabel="898-01-MA1" JumpToLabel="909-21-CV1" Canvas.Left="106" Canvas.Top="775" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left" />
-        <Labels:JumpLabel JumpFromLabel="898-01-MA1" JumpToLabel="909-21-CV1" Canvas.Left="77" Canvas.Top="623" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DetailsLabel ComponentName="880-HOPPER" DetailsPageName="D880" HideComponentName="True" Canvas.Left="393" Canvas.Top="237" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel ComponentName="920-HOPPER" DetailsPageName="D920" HideComponentName="True" Canvas.Left="1035" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="880-62-LEV" Canvas.Left="425" Canvas.Top="237" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="880-61-LEV" Canvas.Left="295" Canvas.Top="237" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="880-01-EC1" Canvas.Left="364" Canvas.Top="389" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="880-01-ECS6" Canvas.Left="231" Canvas.Top="338" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="880-01-ECS7" Canvas.Left="492" Canvas.Top="338" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="880-61-LS4" Canvas.Left="334" Canvas.Top="112" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="886-01-MA1" Canvas.Left="367" Canvas.Top="514" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="885-01-MA1" Canvas.Left="197" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Top="488" />
-        <Labels:DeviceLabel ComponentName="879-21-CV1" Canvas.Left="186" Canvas.Top="15" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="879-71-ECS2" Canvas.Left="40" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="920-71-ECS2" Canvas.Left="952" Canvas.Top="482" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="920-62-LEV" Canvas.Left="1067" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="920-61-LEV" Canvas.Left="937" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="920-01-EC1" Canvas.Left="1005" Canvas.Top="306" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="920-01-ECS6" Canvas.Left="873" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="920-01-ECS7" Canvas.Left="1133" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="920-61-LS4" Canvas.Left="975" Canvas.Top="19" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="923-01-MA1" Canvas.Left="1251" Canvas.Top="693" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="921-01-MA1" Canvas.Left="1404" Canvas.Top="669" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="928-01-MA1" Canvas.Left="1079" Canvas.Top="578" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="927-01-MA1" Canvas.Left="1156" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="882-21-CV1" Canvas.Left="600" Canvas.Top="523" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="888-01-MA1" Canvas.Left="516" Canvas.Top="687" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="887-01-MA1" Canvas.Left="667" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="883-01-MA1" Canvas.Left="361" Canvas.Top="727" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="881-01-MA1" Canvas.Left="197" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="926-01-MA1" Canvas.Left="1015" Canvas.Top="753" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="925-01-MA1" Canvas.Left="923" Canvas.Top="673" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:JumpLabel JumpFromLabel="898-01-MA1" JumpToLabel="909-21-CV1" Canvas.Left="284" Canvas.Top="697" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <Labels:DetailsLabel ComponentName="890-HOPPER" DetailsPageName="D890" HideComponentName="True" Canvas.Left="393" Canvas.Top="237" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="950-HOPPER" DetailsPageName="D950" HideComponentName="True" Canvas.Left="1035" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="890-62-LEV" Canvas.Left="425" Canvas.Top="237" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="890-61-LEV" Canvas.Left="295" Canvas.Top="237" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="890-01-EC1" Canvas.Left="364" Canvas.Top="389" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="890-01-ECS6" Canvas.Left="231" Canvas.Top="338" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="890-01-ECS7" Canvas.Left="492" Canvas.Top="338" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="890-61-LS4" Canvas.Left="334" Canvas.Top="112" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="896-01-MA1" Canvas.Left="367" Canvas.Top="514" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="895-01-MA1" Canvas.Left="197" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Top="488" />
+        <Labels:DeviceLabel ComponentName="950-71-ECS2" Canvas.Left="952" Canvas.Top="482" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="950-62-LEV" Canvas.Left="1067" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="950-61-LEV" Canvas.Left="937" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="950-01-EC1" Canvas.Left="1005" Canvas.Top="306" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="950-01-ECS6" Canvas.Left="873" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="950-01-ECS7" Canvas.Left="1133" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="950-61-LS4" Canvas.Left="975" Canvas.Top="19" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="953-01-MA1" Canvas.Left="1251" Canvas.Top="693" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="951-01-MA1" Canvas.Left="1404" Canvas.Top="669" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="958-01-MA1" Canvas.Left="1079" Canvas.Top="578" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="957-01-MA1" Canvas.Left="1156" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="892-21-CV1" Canvas.Left="600" Canvas.Top="523" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="898-01-MA1" Canvas.Left="516" Canvas.Top="687" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="897-01-MA1" Canvas.Left="667" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="956-01-MA1" Canvas.Left="1015" Canvas.Top="753" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="955-01-MA1" Canvas.Left="923" Canvas.Top="673" HorizontalAlignment="Left" VerticalAlignment="Center" />
     </Canvas>
 </UserControl>
