--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D950.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D950.xaml
@@ -17,5 +17,7 @@
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-62-LEV" SignalName="LSH" Canvas.Left="272" Canvas.Top="94" />
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="950-61-LEV" Canvas.Left="77" Canvas.Top="219"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="950-62-LEV" Canvas.Left="285" Canvas.Top="219"/>
+        <Labels:SignalLabel ComponentName="950-61-LEV" SignalName="LSL" Canvas.Left="59" Canvas.Top="166" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:SignalLabel ComponentName="950-62-LEV" SignalName="LSL" Canvas.Left="272" Canvas.Top="166" HorizontalAlignment="Center" VerticalAlignment="Top" />
     </Canvas>
 </UserControl>
